/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

option java_package = "org.apache.reef.proto";
option java_outer_classname = "EvaluatorShimProtocol";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

enum EvaluatorShimStatus {
    UNKNOWN = 1;
    ONLINE  = 2;
}

enum EvaluatorShimCommand {
    LAUNCH_EVALUATOR = 1;
    TERMINATE        = 2;
}

message EvaluatorShimControlProto {
    required EvaluatorShimCommand command     = 1;
    optional string evaluatorConfigString     = 2;
    optional string evaluatorLaunchCommand    = 3;
    optional string evaluatorFileResourcesUrl = 4;
}

message EvaluatorShimStatusProto {
    required EvaluatorShimStatus status = 1;
    required string remoteIdentifier    = 2;
    required string containerId         = 3;
}
